--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glass {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.223);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.013);
+    backdrop-filter: blur(5.7px);
+    -webkit-backdrop-filter: blur(1.7px);
+}
