Registration and login page problem fix. Private route create and implement. also, property details page images galley slider creation done

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,24 @@
 @tailwind components;
 @tailwind utilities;
 
-.glass {
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.223);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.013);
-    backdrop-filter: blur(5.7px);
-    -webkit-backdrop-filter: blur(1.7px);
+.image-gallery-content .image-gallery-slide .image-gallery-image {
+    max-width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.image-gallery-thumbnail.active{
+    border: 4px solid orange !important;
+}
+
+.image-gallery-thumbnail:hover{
+    border: 4px solid orange !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .image-gallery-content .image-gallery-slide .image-gallery-image {
+        max-width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
 }
