--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,17 @@
     object-fit: cover;
 }
 
-.image-gallery-thumbnail.active{
+.image-gallery-thumbnail.active {
     border: 4px solid orange !important;
 }
 
-.image-gallery-thumbnail:hover{
+.image-gallery-thumbnail:hover {
     border: 4px solid orange !important;
+}
+
+.nav-link {
+    background-color: #3b81f6;
+    color: white;
 }
 
 @media only screen and (max-width: 600px) {
